Fix: coffee cards spacing

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -134,7 +134,7 @@ header {
 }
 
 .order-spinner:hover {
-    background-color: #2d2d2d !important;
+    background-color: var(--bs-dark)!important;
     color: #DEE2E6 !important;
 }
 .order-badge-container {
@@ -170,6 +170,10 @@ footer {
     max-width: 50rem;
 }
 
+.product-list {
+    justify-content: space-between; /* Alinha os itens à esquerda */
+   
+}
 @media only screen and (max-width: 1280px) {
     .product-list {
         justify-content: flex-start; /* Alinha os itens à esquerda */
